k8s/traefik-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webcolor
  namespace: web-color  
spec:
  ingressClassName: traefik
  rules:
  - host: webcolor.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webcolor
            port:
              number: 80
